# voice-whisper

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
audio_capture/windows/: wasapi_capture.cpp  wasapi_capture.h
stream/: CMakeLists.txt  common-sdl.cpp  common-sdl.h  common.cpp  common.h  main.cpp  stream.cpp
stream_app/: CMakeLists.txt  main.cpp
virtual_audio_cable/: CMakeLists.txt  main.cpp  policy_config.h
